--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -2002,15 +2002,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main e386718] 14-copy_html\n",
-      " 2 files changed, 18 insertions(+), 11 deletions(-)\n"
+      "[main d134f28] 0x01-shell_permissions/100-change_owner_and_group\n",
+      " 2 files changed, 53 insertions(+), 33 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/100-change_owner_and_group\n"
      ]
     },
     {
@@ -2018,7 +2019,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   b395211..e386718  main -> main\n"
+      "   048565d..d134f28  main -> main\n"
      ]
     }
    ],
@@ -2038,7 +2039,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 15. Let's move</h4>\n",
+    "<h4> 15. Symbolic links</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -2048,100 +2049,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Create a script that moves all files beginning with an uppercase letter to the directory `/tmp/u`.\n",
+    "##### Write a script that changes the owner and the group owner of _hello to vincent and staff respectively.\n",
     "\n",
-    "##### You can assume that the directory `/tmp/u` will exist when we will run your script\n",
+    "* The file _hello is in the working directory\n",
+    "* The file _hello is a symbolic link\n",
     "\n",
-    "##### You can consider that all HTML files have the extension `.html`\n",
     "```bash\n",
-    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls -la\n",
-    "total 148\n",
-    "drwxrwxr-x  3 ubuntu ubuntu   4096 Sep 20 03:33 .\n",
-    "drwxrwxrwt 12 root   root   139264 Sep 20 03:26 ..\n",
-    "-rw-rw-r--  1 ubuntu ubuntu      0 Sep 20 03:32 My_file\n",
-    "lrwxrwxrwx  1 ubuntu ubuntu      7 Sep 20 03:24 __ls__ -> /bin/ls\n",
-    "-rw-rw-r--  1 ubuntu ubuntu      0 Sep 20 03:32 Elif_ym\n",
-    "-rw-rw-r--  1 ubuntu ubuntu      0 Sep 20 03:32 random_file\n",
-    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls -la /tmp/u\n",
-    "total 8\n",
-    "drwxrwxr-x 2 ubuntu ubuntu 4096 Sep 20 03:33 .\n",
-    "drwxrwxr-x 3 ubuntu ubuntu 4096 Sep 20 03:33 ..\n",
-    "ubuntu@ip-172-31-63-244:/tmp/sym$ ./100-lets_move\n",
-    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls -la\n",
-    "total 148\n",
-    "drwxrwxr-x  3 ubuntu ubuntu   4096 Sep 20 03:33 .\n",
-    "drwxrwxrwt 12 root   root   139264 Sep 20 03:26 ..\n",
-    "lrwxrwxrwx  1 ubuntu ubuntu      7 Sep 20 03:24 __ls__ -> /bin/ls\n",
-    "-rw-rw-r--  1 ubuntu ubuntu      0 Sep 20 03:32 random_file\n",
-    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls -la /tmp/u\n",
-    "total 8\n",
-    "drwxrwxr-x 2 ubuntu ubuntu 4096 Sep 20 03:33 .\n",
-    "drwxrwxr-x 3 ubuntu ubuntu 4096 Sep 20 03:33 ..\n",
-    "-rw-rw-r-- 1 ubuntu ubuntu    0 Sep 20 03:32 My_file\n",
-    "-rw-rw-r-- 1 ubuntu ubuntu    0 Sep 20 03:32 Elif_ym\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 24\n",
+    "-rwxrwxr-x 1 julien julien   44 Sep 20 15:12 101-symbolic_link_permissions\n",
+    "-rw-rw-r-- 1 julien julien   23 Sep 20 14:25 hello\n",
+    "lrwxrwxrwx 1 julien julien    5 Sep 20 15:10 _hello -> hello\n",
+    "julien@ubuntu:/tmp/h$ sudo ./101-symbolic_link_permissions \n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 24\n",
+    "-rwxrwxr-x 1 julien julien      44 Sep 20 15:12 101-symbolic_link_permissions\n",
+    "-rw-rw-r-- 1 julien julien      23 Sep 20 14:25 hello\n",
+    "lrwxrwxrwx 1 vincent  staff    5 Sep 20 15:10 _hello -> hello\n",
+    "julien@ubuntu:/tmp/h$ \n",
     "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `100-lets_move`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `101-symbolic_link_permissions`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/100-lets_move\n"
+      "Writing 0x01-shell_permissions/101-symbolic_link_permissions\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/100-lets_move\n",
+    "%%file 0x01-shell_permissions/101-symbolic_link_permissions\n",
     "#!/bin/bash\n",
-    "mv [[:upper:]]* /tmp/u/"
+    "chown -h vincent:staff _hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "mv: cannot move 'README.md' to '/tmp/u/': Not a directory\n"
+      "chown: invalid user: ‘vincent:staff’\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 84\n",
-      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 28 00:38 .\n",
-      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 28 00:39 ..\n",
-      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:43 .git\n",
-      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
-      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 28 00:49 0x00-shell_basics\n",
-      "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
-      "lrwxrwxrwx  1 elkomy elkomy     7 Feb 28 00:25 __ls__ -> /bin/ls\n",
-      "-rw-r--r--  1 elkomy elkomy 61343 Feb 28 00:49 alx-system_engineering-devops.ipynb\n",
-      "-rw-r--r--  1 elkomy elkomy     0 Feb 28 00:49 test.HTML\n"
+     "ename": "CalledProcessError",
+     "evalue": "Command 'b'chmod u+x  0x01-shell_permissions/101-symbolic_link_permissions\\nsource ./0x01-shell_permissions/101-symbolic_link_permissions\\n'' returned non-zero exit status 1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_cell_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbash\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchmod u+x  0x01-shell_permissions/101-symbolic_link_permissions\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124msource ./0x01-shell_permissions/101-symbolic_link_permissions\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:154\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshebang(line, cell)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:314\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 314\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'chmod u+x  0x01-shell_permissions/101-symbolic_link_permissions\\nsource ./0x01-shell_permissions/101-symbolic_link_permissions\\n'' returned non-zero exit status 1."
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "touch ./test.HTML\n",
-    "chmod u+x 0x00-shell_basics/100-lets_move\n",
-    "source ./0x00-shell_basics/100-lets_move\n",
-    "ls -la"
+    "chmod u+x  0x01-shell_permissions/101-symbolic_link_permissions\n",
+    "source ./0x01-shell_permissions/101-symbolic_link_permissions"
    ]
   },
   {
@@ -2170,7 +2154,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"100-lets_move\"\n",
+    "git commit -m \"101\"\n",
     "git push"
    ]
   },
