--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -2130,16 +2130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 34a8c29] 100-lets_move\n",
-      " 2 files changed, 150 insertions(+), 4 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/100-lets_move\n"
+      "[main de06374] 101\n",
+      " 2 files changed, 45 insertions(+), 59 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/101-symbolic_link_permissions\n"
      ]
     },
     {
@@ -2147,7 +2147,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   e386718..34a8c29  main -> main\n"
+      "   d134f28..de06374  main -> main\n"
      ]
     }
    ],
@@ -2167,7 +2167,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 16. Clean Emacs</h4>\n",
+    "<h4> 16. If only</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -2177,78 +2177,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Create a script that deletes all files in the current working directory that end with the character `~`.\n",
+    "##### Write a script that changes the owner of the file hello to betty only if it is owned by the user guillaume.\n",
+    "\n",
+    "* The file hello will be in the working directory\n",
     "\n",
     "\n",
     "```bash\n",
-    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls\n",
-    "main.c  main.c~  Makefile~\n",
-    "ubuntu@ip-172-31-63-244:/tmp/sym$ ./101-clean_emacs\n",
-    "ubuntu@ip-172-31-63-244:/tmp/emacs$ ls\n",
-    "main.c\n",
-    "ubuntu@ip-172-31-63-244:/tmp/emacs$ ```\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 24\n",
+    "-rwxrwxr-x 1 julien    julien      47 Sep 20 15:18 102-if_only \n",
+    "-rw-rw-r-- 1 guillaume julien      23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ sudo ./102-if_only \n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 24\n",
+    "-rwxrwxr-x 1 julien julien      47 Sep 20 15:18 102-if_only \n",
+    "-rw-rw-r-- 1 betty  julien      23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$  ```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `101-clean_emacs`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `102-if_only`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/101-clean_emacs\n"
+      "Writing 0x01-shell_permissions/102-if_only\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/101-clean_emacs\n",
+    "%%file 0x01-shell_permissions/102-if_only\n",
     "#!/bin/bash\n",
-    "rm *~"
+    "chown --from=guillaume betty hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "rm: cannot remove '*~': No such file or directory\n"
+      "chown: invalid user: ‘guillaume’\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 88\n",
-      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 28 00:38 .\n",
-      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 28 00:39 ..\n",
-      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:50 .git\n",
-      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
-      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 28 00:56 0x00-shell_basics\n",
-      "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
-      "lrwxrwxrwx  1 elkomy elkomy     7 Feb 28 00:25 __ls__ -> /bin/ls\n",
-      "-rw-r--r--  1 elkomy elkomy 64487 Feb 28 00:56 alx-system_engineering-devops.ipynb\n",
-      "-rw-r--r--  1 elkomy elkomy     0 Feb 28 00:56 test.HTML\n"
+     "ename": "CalledProcessError",
+     "evalue": "Command 'b'chmod u+x 0x01-shell_permissions/102-if_only\\nsource ./0x01-shell_permissions/102-if_only\\n'' returned non-zero exit status 1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_cell_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbash\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchmod u+x 0x01-shell_permissions/102-if_only\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124msource ./0x01-shell_permissions/102-if_only\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:154\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshebang(line, cell)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:314\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 314\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'chmod u+x 0x01-shell_permissions/102-if_only\\nsource ./0x01-shell_permissions/102-if_only\\n'' returned non-zero exit status 1."
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "touch ./test.HTML\n",
-    "chmod u+x 0x00-shell_basics/101-clean_emacs\n",
-    "source ./0x00-shell_basics/101-clean_emacs\n",
-    "ls -la"
+    "chmod u+x 0x01-shell_permissions/102-if_only\n",
+    "source ./0x01-shell_permissions/102-if_only\n"
    ]
   },
   {
@@ -2277,7 +2279,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"101-clean_emacs\"\n",
+    "git commit -m \"103\"\n",
     "git push"
    ]
   },
