--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -2255,16 +2255,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 7631878] 101-clean_emacs\n",
-      " 2 files changed, 130 insertions(+), 4 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/101-clean_emacs\n"
+      "[main f7131c3] 102\n",
+      " 2 files changed, 43 insertions(+), 39 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/102-if_only\n"
      ]
     },
     {
@@ -2272,14 +2272,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   34a8c29..7631878  main -> main\n"
+      "   de06374..f7131c3  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"103\"\n",
+    "git commit -m \"102\"\n",
     "git push"
    ]
   },
@@ -2292,7 +2292,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 17. Tree</h4>\n",
+    "<h4> 17. Star Wars</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -2302,79 +2302,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Create a script that creates the directories` welcome/`, `welcome/to/` and `welcome/to/school` in the current directory.\n",
+    "##### Write a script that will play the StarWars IV episode in the terminal.\n",
     "\n",
-    "##### You are only allowed to use two spaces (and lines) in your script, not more.\n",
-    "\n",
-    "\n",
-    "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 4\n",
-    "-rwxrw-r-- 1 julien julien 44 Sep 20 12:09 102-tree\n",
-    "julien@ubuntu:/tmp/h$ wc -l 102-tree \n",
-    "2 102-tree\n",
-    "julien@ubuntu:/tmp/h$ head -1 102-tree \n",
-    "#!/bin/bash\n",
-    "julien@ubuntu:/tmp/h$ tr -cd ' ' < 102-tree | wc -c # you do not have to understand this yet, but the result should be 2, 1 or 0\n",
-    "2\n",
-    "julien@ubuntu:/tmp/h$ ./102-tree \n",
-    "julien@ubuntu:/tmp/h$ ls\n",
-    "102-tree  welcome\n",
-    "julien@ubuntu:/tmp/h$ ls welcome/\n",
-    "to\n",
-    "julien@ubuntu:/tmp/h$ ls -l welcome/to\n",
-    "total 4\n",
-    "drwxrwxr-x 2 julien julien 4096 Sep 20 12:11 school\n",
-    "julien@ubuntu:/tmp/h$ \n",
-    " ```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `102-tree`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `103-Star_Wars`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create multiple nested folders by adding the -p \n",
-    "# –p option ensures that intermediate directories are created"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x00-shell_basics/102-tree\n"
+      "Writing 0x01-shell_permissions/103-Stare_Wars\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/102-tree\n",
+    "%%file 0x01-shell_permissions/103-Stare_Wars\n",
     "#!/bin/bash\n",
-    "mkdir -p welcome/to/school"
+    "ntelnet towel.blinkenlights.nl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "./0x01-shell_permissions/103-Stare_Wars: line 2: ntelnet: command not found\n"
+     ]
+    },
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command 'b'\\nchmod u+x 0x01-shell_permissions/103-Stare_Wars\\nsource ./0x01-shell_permissions/103-Stare_Wars\\n'' returned non-zero exit status 127.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_cell_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbash\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mchmod u+x 0x01-shell_permissions/103-Stare_Wars\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124msource ./0x01-shell_permissions/103-Stare_Wars\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:154\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshebang(line, cell)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:314\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 314\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'\\nchmod u+x 0x01-shell_permissions/103-Stare_Wars\\nsource ./0x01-shell_permissions/103-Stare_Wars\\n'' returned non-zero exit status 127."
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
-    "touch ./test.HTML\n",
-    "chmod u+x 0x00-shell_basics/102-tree\n",
-    "source ./0x00-shell_basics/102-tree\n",
-    "ls welcome/to/school/"
+    "\n",
+    "chmod u+x 0x01-shell_permissions/103-Stare_Wars\n",
+    "source ./0x01-shell_permissions/103-Stare_Wars\n"
    ]
   },
   {
