--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -2367,15 +2367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 79a006e] 102-tree\n",
-      " 1 file changed, 4 insertions(+), 4 deletions(-)\n"
+      "[main 1bf428d] StrarWars\n",
+      " 2 files changed, 43 insertions(+), 53 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/103-Stare_Wars\n"
      ]
     },
     {
@@ -2383,14 +2384,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   c6a7b42..79a006e  main -> main\n"
+      "   f7131c3..1bf428d  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"102-tree\"\n",
+    "git commit -m \"StrarWars\"\n",
     "git push"
    ]
   },
