--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -2314,21 +2314,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/103-Star_Wars\n"
+      "Overwriting 0x01-shell_permissions/103-Star_Wars\n"
      ]
     }
    ],
    "source": [
     "%%file 0x01-shell_permissions/103-Star_Wars\n",
     "#!/bin/bash\n",
-    "ntelnet towel.blinkenlights.nl"
+    "telnet towel.blinkenlights.nl"
    ]
   },
   {
@@ -2367,15 +2367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main d973675] StrarWars\n",
-      " 1 file changed, 6 insertions(+), 5 deletions(-)\n"
+      "[main 451596b] StrarWars\n",
+      " 2 files changed, 16 insertions(+), 15 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/103-Star_Wars\n"
      ]
     },
     {
@@ -2383,7 +2384,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   1bf428d..d973675  main -> main\n"
+      "   d973675..451596b  main -> main\n"
      ]
     }
    ],
