--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -2333,50 +2333,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "./0x01-shell_permissions/103-Star_Wars: line 2: ntelnet: command not found\n"
-     ]
-    },
-    {
-     "ename": "CalledProcessError",
-     "evalue": "Command 'b'\\nchmod u+x 0x01-shell_permissions/103-Star_Wars\\nsource ./0x01-shell_permissions/103-Star_Wars\\n'' returned non-zero exit status 127.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[38], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_cell_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbash\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mchmod u+x 0x01-shell_permissions/103-Star_Wars\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124msource ./0x01-shell_permissions/103-Star_Wars\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:154\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshebang(line, cell)\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:314\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 314\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
-      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'\\nchmod u+x 0x01-shell_permissions/103-Star_Wars\\nsource ./0x01-shell_permissions/103-Star_Wars\\n'' returned non-zero exit status 127."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
     "chmod u+x 0x01-shell_permissions/103-Star_Wars\n",
-    "source ./0x01-shell_permissions/103-Star_Wars\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 451596b] StrarWars\n",
-      " 2 files changed, 16 insertions(+), 15 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/103-Star_Wars\n"
+      "Trying 213.136.8.188...\n",
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./0x01-shell_permissions/103-Star_Wars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 80ce041] StrarWars\n",
+      " 2 files changed, 9 insertions(+), 8 deletions(-)\n"
      ]
     },
     {
@@ -2384,7 +2379,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   d973675..451596b  main -> main\n"
+      "   451596b..80ce041  main -> main\n"
      ]
     }
    ],
@@ -2394,403 +2389,6 @@
     "git commit -m \"StrarWars\"\n",
     "git push"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### \n",
-    "\n",
-    "\n",
-    "---\n",
-    "<center>\n",
-    "<h4> 18. Life is a series of commas, not periods</h4>\n",
-    "</center>\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Write a command that lists all the files and directories of the current directory, separated by commas `(,)`.\n",
-    "\n",
-    "* Directory names should end with a slash (/)\n",
-    "* Files and directories starting with a dot (.) should be listed\n",
-    "* The listing should be alpha ordered, except for the directories . and .. which should be listed at the very beginning\n",
-    "* Only digits and letters are used to sort; Digits should come first\n",
-    "* You can assume that all the files we will test with will have at least one letter or one digit\n",
-    "* The listing should end with a new line\n",
-    "\n",
-    "\n",
-    "```bash\n",
-    "ubuntu@ubuntu:~/$ ls -a\n",
-    "\n",
-    ".  ..  0-commas  0-commas-checks  1-empty_casks  2-gifs  3-directories  4-zeros  5-rot13  6-odd  7-sort_rot13  Makefile  quote  .test  test_dir  test.var\n",
-    "\n",
-    "ubuntu@ubuntu:~/$ ./103-commas\n",
-    "\n",
-    "./, ../, 0-commas, 0-commas-checks/, 1-empty_casks, 2-gifs, 3-directories, 4-zeros, 5-rot13, 6-odd, 7-sort_rot13, Makefile, quote, .test, test_dir/, test.var\n",
-    "\n",
-    "ubuntu@ubuntu:~/$\n",
-    "\n",
-    "#### Repo:\n",
-    "\n",
-    "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `103-commas`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing 0x00-shell_basics/103-commas\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file 0x00-shell_basics/103-commas\n",
-    "#!/bin/bash\n",
-    "ls -axmp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./, ../, .git/, .gitignore, 0x00-shell_basics/, README.md, __ls__,\n",
-      "alx-system_engineering-devops.ipynb, test.HTML, welcome/\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "chmod u+x 0x00-shell_basics/103-commas\n",
-    "source ./0x00-shell_basics/103-commas\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main f0c6483] 103-commas\n",
-      " 2 files changed, 128 insertions(+), 4 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/103-commas\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   79a006e..f0c6483  main -> main\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "git add .\n",
-    "git commit -m \"103-commas\"\n",
-    "git push"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### \n",
-    "\n",
-    "\n",
-    "---\n",
-    "<center>\n",
-    "<h4> 19.File type: School</h4>\n",
-    "</center>\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Create a magic file school.mgc that can be used with the command file to detect School data files. School data files always contain the string SCHOOL at offset 0.\n",
-    "\n",
-    "\n",
-    "```bash\n",
-    "ubuntu@ip-172-31-63-244:/tmp/magic$ cp /bin/ls .\n",
-    "ubuntu@ip-172-31-63-244:/tmp/magic$ ls -la\n",
-    "total 268\n",
-    "drwxrwxr-x  2 ubuntu ubuntu   4096 Sep 20 02:44 .\n",
-    "drwxrwxrwt 11 root   root   139264 Sep 20 02:44 ..\n",
-    "-rw-r--r--  1 ubuntu ubuntu    496 Sep 20 02:42 school.mgc\n",
-    "-rwxr-xr-x  1 ubuntu ubuntu 110080 Sep 20 02:43 ls\n",
-    "-rw-rw-r--  1 ubuntu ubuntu     50 Sep 20 02:06 thisisaschoolfile\n",
-    "-rw-rw-r--  1 ubuntu ubuntu     30 Sep 20 02:16 thisisatextfile\n",
-    "ubuntu@ip-172-31-63-244:/tmp/magic$ file --mime-type -m school.mgc *\n",
-    "school.mgc:         application/octet-stream\n",
-    "ls:                    application/octet-stream\n",
-    "thisisaschoolfile: School\n",
-    "thisisatextfile:       text/plain\n",
-    "ubuntu@ip-172-31-63-244:/tmp/magic$ file -m school.mgc *\n",
-    "school.mgc:         data\n",
-    "ls:                    data\n",
-    "thisisaschoolfile: School data\n",
-    "thisisatextfile:       ASCII text\n",
-    "ubuntu@ip-172-31-63-244:/tmp/magic$\n",
-    "```\n",
-    "\n",
-    "#### Repo:\n",
-    "\n",
-    "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `104-school.mgc`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting 0x00-shell_basics/school.mgc\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file 0x00-shell_basics/school.mgc\n",
-    "0 string SCHOOL School data\n",
-    "!:mime School\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "file -C -m 0x00-shell_basics/school.mgc\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "file -C -m 0x00-shell_basics/school.mgc "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing 0x00-shell_basics/thisisaschoolfile\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file 0x00-shell_basics/thisisaschoolfile \n",
-    "SCHOOL schools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing 0x00-shell_basics/thisisatextfile\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file 0x00-shell_basics/thisisatextfile\n",
-    "thisisatextfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0x00-shell_basics/thisisaschoolfile: ASCII text\n",
-      "0x00-shell_basics/thisisatextfile:   ASCII text\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "file 0x00-shell_basics/thisisaschoolfile 0x00-shell_basics/thisisatextfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main 77198b0] 104-school.mgc\n",
-      " 2 files changed, 4 insertions(+), 7 deletions(-)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   310095c..77198b0  main -> main\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "git add .\n",
-    "git commit -m \"104-school.mgc\"\n",
-    "git push"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### NEXT <code> alx-system_engineering-devops </code>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "# creating alx-zero_day folder\n",
-    "\n",
-    "folder_path = r'C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops'\n",
-    "if not os.path.exists(folder_path):\n",
-    "    os.makedirs(folder_path)\n",
-    "\n",
-    "# Create a README.md inside alx-zero_day\n",
-    "file_path = os.path.join(folder_path, 'README.md')\n",
-    "\n",
-    "with open(file_path, 'w') as file:\n",
-    "    file.write(\"This is a mandatory file\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'alx' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 11\u001b[0m\n\u001b[0;32m      7\u001b[0m dest_folder \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      9\u001b[0m shutil\u001b[38;5;241m.\u001b[39mcopy(source_file, dest_folder)\n\u001b[1;32m---> 11\u001b[0m os\u001b[38;5;241m.\u001b[39mrename(source_file,\u001b[43malx\u001b[49m\u001b[38;5;241m-\u001b[39msystem_engineering\u001b[38;5;241m-\u001b[39mdevops\u001b[38;5;241m.\u001b[39mipynb)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'alx' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "import shutil\n",
-    "import os\n",
-    "\n",
-    "# copy the ipynb file from zero_day to alx-zero_day\n",
-    "\n",
-    "source_file = \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/alx-zero_day.ipynb\"  \n",
-    "dest_folder = \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops\"\n",
-    "\n",
-    "shutil.copy(source_file, dest_folder)\n",
-    "\n",
-    "os.rename(source_file,r\"alx-system_engineering-devops.ipynb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Microsoft Windows [Version 10.0.22631.3007]\n",
-      "(c) Microsoft Corporation. All rights reserved.\n",
-      "\n",
-      "(c:\\Users\\komy2\\OneDrive\\Desktop\\AlxSE\\Repos\\zero_day\\.conda) c:\\Users\\komy2\\OneDrive\\Desktop\\AlxSE\\Repos\\zero_day>copy \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/zero_day/zero_day.ipynb\" \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day\"\n",
-      "        1 file(s) copied.\n",
-      "\n",
-      "(c:\\Users\\komy2\\OneDrive\\Desktop\\AlxSE\\Repos\\zero_day\\.conda) c:\\Users\\komy2\\OneDrive\\Desktop\\AlxSE\\Repos\\zero_day>"
-     ]
-    }
-   ],
-   "source": [
-    "%%cmd\n",
-    "copy \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/alx-zero_day.ipynb\" \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "!cp \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/zero_day/zero_day.ipynb\" \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
