--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -2314,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2333,27 +2333,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "chmod u+x 0x01-shell_permissions/103-Star_Wars\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trying 213.136.8.188...\n",
-      "^C\n"
+      "Overwriting 0x01-shell_permissions/103-Star_Wars\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x01-shell_permissions/103-Star_Wars\n",
+    "#!/bin/bash\n",
+    "telnet -6 towel.blinkenlights.nl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting 0x01-shell_permissions/103-Star_Wars\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x01-shell_permissions/103-Star_Wars\n",
+    "#!/bin/bash\n",
+    "telnet [2001:7b8:666:ffff::1:42]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x01-shell_permissions/103-Star_Wars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trying 2001:7b8:666:ffff::1:42...\n",
+      "telnet: Unable to connect to remote host: Network is unreachable\n"
      ]
     }
    ],
@@ -2363,15 +2399,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 80ce041] StrarWars\n",
-      " 2 files changed, 9 insertions(+), 8 deletions(-)\n"
+      "[main 0581e6e] StrarWars\n",
+      " 1 file changed, 11 insertions(+), 406 deletions(-)\n"
      ]
     },
     {
@@ -2379,7 +2415,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   451596b..80ce041  main -> main\n"
+      "   80ce041..0581e6e  main -> main\n"
      ]
     }
    ],
