commiting README.md

--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -14,63 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reinitialized existing Git repository in /home/elkomy/alx-system_engineering-devops/.git/\n",
-      "[main 65cddee] first commit\n",
-      " 6 files changed, 2939 insertions(+), 21 deletions(-)\n",
-      " rename alx-system_engineering-devops.ipynb => 0x00-shell_basics.ipynb (99%)\n",
-      " create mode 100644 0x01-shell_permissions.ipynb\n",
-      " create mode 100644 0x01-shell_permissions/README.md\n",
-      " rewrite README.md (100%)\n",
-      " delete mode 120000 __ls__\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fatal: remote origin already exists.\n",
-      "Enumerating objects: 11, done.\n",
-      "Counting objects: 100% (11/11), done.\n",
-      "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (5/5), done.\n",
-      "Writing objects: 100% (8/8), 9.73 KiB | 9.73 MiB/s, done.\n",
-      "Total 8 (delta 1), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (1/1), done.\u001b[K\n",
-      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   77198b0..65cddee  main -> main\n",
-      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
-      "fatal: remote origin already exists.\n",
-      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
-      "Everything up-to-date\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "#create a new repository on the command line\n",
-    "!echo \"# alx-system_engineering-devops\" > README.md\n",
-    "!git init\n",
-    "!git add .\n",
-    "!git commit -m \"first commit\"\n",
-    "!git branch -M main\n",
-    "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
-    "!git push -u origin main\n",
-    "# #push an existing repository from the command line\n",
-    "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
-    "!git branch -M main\n",
-    "!git push -u origin main"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -84,47 +28,48 @@
    "source": [
     "%%file README.md\n",
     "\n",
-    "## alx-system_engineering-devops/0x00-shell_basics\n",
-    "## alx-system_engineering-devops/0x01-shell_permissions"
+    "## alx-system_engineering-devops/0x00-Shell_basics\n",
+    "## alx-system_engineering-devops/0x01-Shell_permissions\n",
+    "## alx-system_engineering-devops/0x02-Shell, I/O Redirections and filters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "# creating 0x01. Shell, permissions\n",
+    "# creating 0x02-shell_redirectionss\n",
     "\n",
-    "folder_path = r'/home/elkomy/alx-system_engineering-devops/0x01-shell_permissions'\n",
+    "folder_path = r'/home/elkomy/alx-system_engineering-devops/0x02-shell_redirections'\n",
     "if not os.path.exists(folder_path):\n",
     "    os.makedirs(folder_path)\n",
     "\n",
-    "# Create a README.md inside 0x00-shell_basics\n",
+    "# Create a README.md inside 0x02-shell_redirections\n",
     "file_path = os.path.join(folder_path, 'README.md')\n",
     "\n",
     "with open(file_path, 'w') as file:\n",
-    "    file.write(\"This is a README.md file inside alx-system_engineering-devops/0x01-shell_permissions\")\n",
+    "    file.write(\"This is a README.md file inside alx-system_engineering-devops/0x02-shell_redirections\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x01-shell_permissions/README.md\n"
+      "Overwriting 0x02-shell_redirections/README.md\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/README.md\n",
-    "## alx-system_engineering-devops/0x01-shell_permissions"
+    "%%file 0x02-shell_redirections/README.md\n",
+    "This is a README.md"
    ]
   },
   {
@@ -154,7 +99,7 @@
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"\"\n",
+    "!git commit -m \"commiting READNE.md\"\n",
     "!git push -u origin main"
    ]
   },
